--- a/expose/VorlageBA.tex
+++ b/expose/VorlageBA.tex
@@ -4,7 +4,7 @@
 
 % In der Datei defs.tex werden alle globalen LaTeX-spezifischen Einstellungen
 % vorgenommen
-\input{defs}
+\input{chaptersOther/defs}
 
 % Wenn das Kommentarzeichen entfernt wird, kann man mit einem Befehl wie
 %
@@ -20,10 +20,10 @@
 % hinzufügen und natürlich auch vorhandene weglassen.  Die vorhandene
 % Dateistruktur ist lediglich als Beispiel gedacht.
 \begin{document}
-\include{title}
-\include{toc}
-\include{chap1}
-\include{chap2}
-\include{chap3}
-\include{appendix}
+\include{chaptersOther/title}
+\include{chaptersOther/toc}
+\include{chapters/chap1}
+\include{chapters/chap2}
+\include{chapters/chap3}
+\include{chaptersOther/appendix}
 \end{document}
