Add chapter "Hardware and Softwarestack"

--- a/expose/VorlageBA.tex
+++ b/expose/VorlageBA.tex
@@ -4,7 +4,7 @@
 
 % In der Datei defs.tex werden alle globalen LaTeX-spezifischen Einstellungen
 % vorgenommen
-\input{chaptersOther/defs}
+\input{defs}
 
 % Wenn das Kommentarzeichen entfernt wird, kann man mit einem Befehl wie
 %
