--- a/expose/defs.tex
+++ b/expose/defs.tex
@@ -130,5 +130,5 @@
 
 % Metadaten des PDF-Dokumentes; setzen Sie hier Ihren eigenen Namen sowie den
 % Titel Ihrer Arbeit ein
-\hypersetup{pdfauthor={Prof. Dr. Edmund Weitz}}
+\hypersetup{pdfauthor={Hugo Protsch}}
 \hypersetup{pdftitle={Handreichung zur Formatierung von Bachelorarbeiten}}
