--- a/expose/demo.bib
+++ b/expose/demo.bib
@@ -26,15 +26,41 @@ URL={https://doi.org/10.1007/s00591-021-00303-w},
 }
 
 % typischer Eintrag für eine Internetquelle; beachten Sie URLDATE
-@online{zappa,
-AUTHOR = {Frank Zappa},
-TITLE = {Apostrophe (')},
-SUBTITLE = {Stink-Foot},
-URL = {http://www.donlope.net/fz/lyrics/Apostrophe_(').html},
-URLDATE = {2022-03-11},
-PUBLISHER = {DiscReet},
-LOCATION = {Hollywood},
-YEAR = {1974},
+@Online{arcore,
+    TITLE = {{Google ARCore API Overview}},
+    URL = {https://developers.google.com/ar},
+    author = {Google},
+    URLDATE = {2024-01-18},
+}
+
+@Online{arcore-codelab-rawdepth,
+    TITLE = {{Google Codelab - ARCore Raw Depth}},
+    URL = {https://codelabs.developers.google.com/codelabs/arcore-rawdepthapi},
+    author = {Google},
+    URLDATE = {2024-01-25},
+}
+
+@Online{arcore-depth-quickstart,
+    title={{Depth API quickstart for Android}},
+    URL={https://developers.google.com/ar/develop/java/depth/quickstart},
+    author = {Google},
+    URLDATE = {2024-01-25},
+}
+
+
+@Online{arcore-doc-depth,
+    title={{Depth adds realism}},
+    url={https://developers.google.com/ar/develop/depth},
+    author = {Google},
+    URLDATE = {2024-01-25},
+}
+
+
+@Online{arcore-doc-raw-depth,
+    title={{Use Raw Depth in your Android app}},
+    url = {https://developers.google.com/ar/develop/java/depth/raw-depth},
+    URLDATE = {2024-01-25},
+    author = {Google},
 }
 
 @book{schlosser,
