--- a/expose/demo.bib
+++ b/expose/demo.bib
@@ -34,7 +34,7 @@ URL={https://doi.org/10.1007/s00591-021-00303-w},
 }
 
 @Online{arcore-codelab-rawdepth,
-    TITLE = {{Google Codelab - ARCore Raw Depth}},
+    TITLE = {{ARCore Raw Depth - Google Codelab}},
     URL = {https://codelabs.developers.google.com/codelabs/arcore-rawdepthapi},
     author = {Google},
     URLDATE = {2024-01-25},
