--- a/expose/defs.tex
+++ b/expose/defs.tex
@@ -131,4 +131,8 @@
 % Metadaten des PDF-Dokumentes; setzen Sie hier Ihren eigenen Namen sowie den
 % Titel Ihrer Arbeit ein
 \hypersetup{pdfauthor={Hugo Protsch}}
-\hypersetup{pdftitle={Handreichung zur Formatierung von Bachelorarbeiten}}
+\hypersetup{pdftitle={
+    Detecting Geometric Primitives
+    in Depth Data from the
+    Google ARCore Depth API
+}}
