--- a/expose/expose.tex
+++ b/expose/expose.tex
@@ -25,5 +25,6 @@
 \include{chapters/chap1}
 \include{chapters/chap2}
 \include{chapters/chap3}
+\include{chapters/chap4}
 \include{chaptersOther/appendix}
 \end{document}
