--- a/expose/expose.tex
+++ b/expose/expose.tex
@@ -21,10 +21,10 @@
 % Dateistruktur ist lediglich als Beispiel gedacht.
 \begin{document}
 \include{chaptersOther/title}
-\include{chaptersOther/toc}
+%\include{chaptersOther/toc}
+\include{chapters/chap0}
 \include{chapters/chap1}
 \include{chapters/chap2}
 \include{chapters/chap3}
-\include{chapters/chap4}
 \include{chaptersOther/appendix}
 \end{document}
