--- a/expose/defs.tex
+++ b/expose/defs.tex
@@ -87,7 +87,7 @@
 % bereits eingestellt
 \usepackage[style=apa]{biblatex}
 % eine Beispieldatei für ein Literaturverzeichnis
-\addbibresource{demo.bib}
+\addbibresource{expose.bib}
 
 % für die Erzeugung der Grafiken in chap3.tex; wenn Sie PGF/TikZ nicht
 % verwenden wollen, können Sie diese Zeilen entfernen
