--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -13,9 +13,9 @@
 	author = {Kaiser, Adrien and Ybanez Zepeda, Jose Alonso and Boubekeur, Tamy},
 	month = feb,
 	year = {2019},
-	keywords = {3D data, computational geometry, data fitting, geometric primitives, I.3.5 Computing Methodologies/Computer Graphics: Computational Geometry and Object Modelling—Curve, shape abstraction, shape analysis, solid and object representations, surface},
+	keywords = {3D data, computational geometry, data fitting, geometric primitives, I.3.5 Computing Methodologies/Computer Graphics: Computational Geometry and Object Modelling—Curve, shape abstraction, shape analysis, solid and object representations, surface, notion, fundamentals},
 	pages = {167--196},
-	file = {Kaiser et al. - 2019 - A Survey of Simple Geometric Primitives Detection .pdf:C\:\\Users\\hugop\\Zotero\\storage\\YME9444A\\Kaiser et al. - 2019 - A Survey of Simple Geometric Primitives Detection .pdf:application/pdf;Snapshot:C\:\\Users\\hugop\\Zotero\\storage\\97E2ZWPG\\cgf.html:text/html},
+	file = {Kaiser et al. - 2019 - A Survey of Simple Geometric Primitives Detection .pdf:/home/hugop/Zotero/storage/YME9444A/Kaiser et al. - 2019 - A Survey of Simple Geometric Primitives Detection .pdf:application/pdf;Snapshot:/home/hugop/Zotero/storage/97E2ZWPG/cgf.html:text/html},
 }
 
 @article{schnabel_efficient_2007,
@@ -32,9 +32,9 @@
 	author = {Schnabel, R. and Wahl, R. and Klein, R.},
 	month = jun,
 	year = {2007},
-	keywords = {@jenke, Surface Reconstruction},
+	keywords = {@jenke, notion, fundamentals},
 	pages = {214--226},
-	file = {Schnabel et al. - 2007 - Efficient RANSAC for Point‐Cloud Shape Detection.pdf:C\:\\Users\\hugop\\Zotero\\storage\\ZCAI22CK\\Schnabel et al. - 2007 - Efficient RANSAC for Point‐Cloud Shape Detection.pdf:application/pdf},
+	file = {Schnabel et al. - 2007 - Efficient RANSAC for Point‐Cloud Shape Detection.pdf:/home/hugop/Zotero/storage/ZCAI22CK/Schnabel et al. - 2007 - Efficient RANSAC for Point‐Cloud Shape Detection.pdf:application/pdf},
 }
 
 @article{chatzopoulos_mobile_2017,
@@ -50,9 +50,9 @@
 	author = {Chatzopoulos, Dimitris and Bermejo, Carlos and Huang, Zhanpeng and Hui, Pan},
 	year = {2017},
 	note = {Conference Name: IEEE Access},
-	keywords = {AR, Augmented reality, Cloud computing, human computer interaction, Mobile augmented reality, Mobile communication, mobile computing, Mobile computing, Sensors, Smart phones},
+	keywords = {Augmented reality, Cloud computing, human computer interaction, Mobile augmented reality, Mobile communication, mobile computing, Mobile computing, Sensors, Smart phones, notion, exploration},
 	pages = {6917--6950},
-	file = {IEEE Xplore Abstract Record:C\:\\Users\\hugop\\Zotero\\storage\\PWHJTFSN\\7912316.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\hugop\\Zotero\\storage\\VFXVAYL9\\Chatzopoulos et al. - 2017 - Mobile Augmented Reality Survey From Where We Are.pdf:application/pdf},
+	file = {IEEE Xplore Abstract Record:/home/hugop/Zotero/storage/PWHJTFSN/7912316.html:text/html;IEEE Xplore Full Text PDF:/home/hugop/Zotero/storage/VFXVAYL9/Chatzopoulos et al. - 2017 - Mobile Augmented Reality Survey From Where We Are.pdf:application/pdf},
 }
 
 @misc{google_llc_codelab_raw_depth,
@@ -65,7 +65,8 @@
 	author = {{Google LLC} and Turner, Eric},
 	month = may,
 	year = {2022},
-	file = {ARCore Raw Depth Part 1.html:C\:\\Users\\hugop\\Zotero\\storage\\5UGM64DA\\ARCore Raw Depth Part 1.html:text/html;ARCore Raw Depth Part 2.html:C\:\\Users\\hugop\\Zotero\\storage\\FNB27VS8\\ARCore Raw Depth Part 2.html:text/html;ARCore Raw Depth Part 3.html:C\:\\Users\\hugop\\Zotero\\storage\\M4ALWJAJ\\ARCore Raw Depth Part 3.html:text/html},
+	keywords = {notion, fundamentals},
+	file = {ARCore Raw Depth Part 1.html:/home/hugop/Zotero/storage/5UGM64DA/ARCore Raw Depth Part 1.html:text/html;ARCore Raw Depth Part 2.html:/home/hugop/Zotero/storage/FNB27VS8/ARCore Raw Depth Part 2.html:text/html;ARCore Raw Depth Part 3.html:/home/hugop/Zotero/storage/M4ALWJAJ/ARCore Raw Depth Part 3.html:text/html},
 }
 
 @misc{google_llc_arcore_doc,
@@ -76,5 +77,241 @@
 	urldate = {2024-02-09},
 	journal = {Google for Developers},
 	author = {{Google LLC}},
-	file = {Depth adds realism  ARCore.html:C\:\\Users\\hugop\\Zotero\\storage\\54R9ZHDN\\Depth adds realism  ARCore.html:text/html;Overview of ARCore and supported development envir.html:C\:\\Users\\hugop\\Zotero\\storage\\QIJMQ9HN\\Overview of ARCore and supported development envir.html:text/html;Use Raw Depth in your Android app  ARCore.html:C\:\\Users\\hugop\\Zotero\\storage\\WFJ2QVFY\\Use Raw Depth in your Android app  ARCore.html:text/html},
+	keywords = {notion, fundamentals},
+	file = {Depth adds realism  ARCore.html:/home/hugop/Zotero/storage/54R9ZHDN/Depth adds realism  ARCore.html:text/html;Overview of ARCore and supported development envir.html:/home/hugop/Zotero/storage/QIJMQ9HN/Overview of ARCore and supported development envir.html:text/html;Use Raw Depth in your Android app  ARCore.html:/home/hugop/Zotero/storage/WFJ2QVFY/Use Raw Depth in your Android app  ARCore.html:text/html},
+}
+
+@book{de_vries_learn_2020,
+	address = {Erscheinungsort nicht ermittelbar},
+	title = {Learn {OpenGL} - {Graphics} programming: {Learn} modern {OpenGL} graphics programming in a step-by-step fashion},
+	isbn = {978-90-90-33256-7},
+	shorttitle = {Learn {OpenGL} - {Graphics} programming},
+	abstract = {Graphics programmers are often coined the 'wizards' of the game industry. As every magician knows, terms like wizardry and magic are often somewhat exaggerated. Yet, there is a certain charm to graphics programming: the ability to conjure up complete living worlds at our fingertips. Learn OpenGL will teach you the basics, the intermediate, and tons of advanced knowledge, using modern (core-profile) OpenGL. The aim of this book is to show you all there is to modern OpenGL in an easy-to-understand fashion, with clear examples and step-by-step instructions, while also providing a useful reference for later studies. After years of continuous work and improvements on the accompanying website learnopengl.com, with the help of thousands of readers, its content has been professionally revised for this physical copy you now find in your hands. Graphics programming isn't as hard as many people make it out to be... you just need to start},
+	language = {eng},
+	publisher = {Kendall \& Welling},
+	author = {de Vries, Joey},
+	month = jun,
+	year = {2020},
+	keywords = {notion, fundamentals},
+	file = {Vries - 2020 - Learn OpenGL - Graphics programming Learn modern .pdf:/home/hugop/Zotero/storage/4ZL4T74G/Vries - 2020 - Learn OpenGL - Graphics programming Learn modern .pdf:application/pdf},
+}
+
+@article{tarsha-kurdi_hough-transform_2007,
+	title = {Hough-{Transform} and {Extended} {RANSAC} {Algorithms} for {Automatic} {Detection} of {3D} {Building} {Roof} {Planes} from {Lidar} {Data}},
+	abstract = {Airborne laser scanner technique is broadly the most appropriate way to acquire rapidly and with high density 3D data over a city. Once the 3D Lidar data are available, the next task is the automatic data processing, with major aim to construct 3D building models. Among the numerous automatic reconstruction methods, the techniques allowing the detection of 3D building roof planes are of crucial importance. Three main methods arise from the literature: region growing, Hough-transform and Random Sample Consensus (RANSAC) paradigm. Since region growing algorithms are sometimes not very transparent and not homogenously applied, this paper focuses only on the Hough-transform and the RANSAC algorithm. Their principles, their pseudocode - rarely detailed in the related literature - as well as their complete analyses are presented in this paper. An analytic comparison of both algorithms, in terms of processing time and sensitivity to cloud characteristics, shows that despite the limitation encountered in both methods, RANSAC algorithm is still more efficient than the first one. Under other advantages, its processing time is negligible even when the input data size is very large. On the other hand, Hough-transform is very sensitive to the segmentation parameters values. Therefore, RANSAC algorithm has been chosen and extended to exceed its limitations. Its major limitation is that it searches to detect the best mathematical plane among 3D building point cloud even if this plane does not always represent a roof plane. So the proposed extension allows harmonizing the mathematical aspect of the algorithm with the geometry of a roof. At last, it is shown that the extended approach provides very satisfying results, even in the case of very weak point density and for different levels of building complexity. Therefore, once the roof planes are successfully detected, the automatic building modelling can be carried out.},
+	language = {en},
+	author = {Tarsha-Kurdi, Fayez and Landes, Tania and Grussenmeyer, Pierre},
+	year = {2007},
+	keywords = {notion, application},
+	file = {Tarsha-Kurdi et al. - 2007 - Hough-Transform and Extended RANSAC Algorithms for.pdf:/home/hugop/Zotero/storage/8KWUKVUB/Tarsha-Kurdi et al. - 2007 - Hough-Transform and Extended RANSAC Algorithms for.pdf:application/pdf},
+}
+
+@article{haenel_integration_2022,
+	title = {{INTEGRATION} {OF} {DEPTH} {MAPS} {FROM} {ARCORE} {TO} {PROCESS} {POINT} {CLOUDS} {IN} {REAL} {TIME} {ON} {A} {SMARTPHONE}},
+	volume = {XLIII-B2-2022},
+	doi = {10.5194/isprs-archives-XLIII-B2-2022-201-2022},
+	abstract = {Real-world three-dimensional reconstruction is a project of long-standing interest in global computer vision. Many tools have emerged these past years to accurately perceive the surrounding world either through active sensors or through passive algorithmic methods. With the advent and popularization of augmented reality on smartphones, new visualization issues have emerged concerning the virtual experience. Especially a 3D model seems to be essential to provide more realistic AR effects including consistency of occlusion, shadow mapping or even collision between virtual objects and real environment. However, due to the huge computation of most of current approaches, most of these algorithms are working on a computer desktop or high-end smartphones. Indeed, the reconstruction scale is rapidly limited by the complexity of both computation and memory. Therefore, our study aims to find a relevant method to process real time reconstruction of close-range outdoor scenes such as cultural heritage or underground infrastructures in real time locally on a smartphone.},
+	journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+	author = {Haenel, Raphaël and Semler, Quentin and Semin, E. and Grussenmeyer, Pierre and Alby, Emmanuel},
+	month = may,
+	year = {2022},
+	keywords = {notion, application},
+	pages = {201--208},
+	file = {Full Text:/home/hugop/Zotero/storage/X97MCSAW/Haenel et al. - 2022 - INTEGRATION OF DEPTH MAPS FROM ARCORE TO PROCESS P.pdf:application/pdf},
+}
+
+@article{valentin_depth_2018,
+	title = {Depth from motion for smartphone {AR}},
+	volume = {37},
+	issn = {0730-0301},
+	url = {https://dl.acm.org/doi/10.1145/3272127.3275041},
+	doi = {10.1145/3272127.3275041},
+	abstract = {Augmented reality (AR) for smartphones has matured from a technology for earlier adopters, available only on select high-end phones, to one that is truly available to the general public. One of the key breakthroughs has been in low-compute methods for six degree of freedom (6DoF) tracking on phones using only the existing hardware (camera and inertial sensors). 6DoF tracking is the cornerstone of smartphone AR allowing virtual content to be precisely locked on top of the real world. However, to really give users the impression of believable AR, one requires mobile depth. Without depth, even simple effects such as a virtual object being correctly occluded by the real-world is impossible. However, requiring a mobile depth sensor would severely restrict the access to such features. In this article, we provide a novel pipeline for mobile depth that supports a wide array of mobile phones, and uses only the existing monocular color sensor. Through several technical contributions, we provide the ability to compute low latency dense depth maps using only a single CPU core of a wide range of (medium-high) mobile phones. We demonstrate the capabilities of our approach on high-level AR applications including real-time navigation and shopping.},
+	number = {6},
+	urldate = {2024-02-16},
+	journal = {ACM Transactions on Graphics},
+	author = {Valentin, Julien and Kowdle, Adarsh and Barron, Jonathan T. and Wadhwa, Neal and Dzitsiuk, Max and Schoenberg, Michael and Verma, Vivek and Csaszar, Ambrus and Turner, Eric and Dryanovski, Ivan and Afonso, Joao and Pascoal, Jose and Tsotsos, Konstantine and Leung, Mira and Schmidt, Mirko and Guleryuz, Onur and Khamis, Sameh and Tankovitch, Vladimir and Fanello, Sean and Izadi, Shahram and Rhemann, Christoph},
+	month = dec,
+	year = {2018},
+	keywords = {depth from motion, motion stereo, structure from motion, notion, fundamentals},
+	pages = {193:1--193:19},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/R4BK7KU5/Valentin et al. - 2018 - Depth from motion for smartphone AR.pdf:application/pdf},
+}
+
+@article{azuma_survey_1997,
+	title = {A {Survey} of {Augmented} {Reality}},
+	abstract = {This paper surveys the field of Augmented Reality, in which 3-D virtual objects are integrated into a 3-D real environment in real time. It describes the medical, manufacturing, visualization, path planning, entertainment and military applications that have been explored. This paper describes the characteristics of Augmented Reality systems, including a detailed discussion of the tradeoffs between optical and video blending approaches. Registration and sensing errors are two of the biggest problems in building effective Augmented Reality systems, so this paper summarizes current efforts to overcome these problems. Future directions and areas requiring further research are discussed. This survey provides a starting point for anyone interested in researching or using Augmented Reality.},
+	language = {en},
+	author = {Azuma, Ronald T},
+	month = aug,
+	year = {1997},
+	keywords = {notion},
+	file = {Azuma - A Survey of Augmented Reality.pdf:/home/hugop/Zotero/storage/JWAGTN8J/Azuma - A Survey of Augmented Reality.pdf:application/pdf},
+}
+
+@techreport{bhavsar_point_2022,
+	title = {Point {Cloud} {Room} {Estimation} for {3D} {Mesh} {Placement}},
+	abstract = {Point clouds can help us easily determine different components within a room. In this paper, we demonstrate a RANSAC heuristic model to detect floors and ceilings by using an RGB and depth image, applying plane segmentation to the generated point cloud. We apply these predictions to place a 3D mesh chair within the room, using our results to scale and align our chair object. We do so by identifying free space within the floor’s point cloud, then translating the chair to that location. Results show that our model is capable of identifying empty floor space sufficient to place a chair mesh, in a variety of rooms, given adequate conditions. On the other hand, cluttered rooms and large horizontal objects, such as tables, pose a challenge for the heuristics used, and options to improve accuracy are discussed, as well as performance improvements to search point clouds efficiently.},
+	language = {en},
+	author = {Bhavsar, Anand},
+	year = {2022},
+	keywords = {notion, application},
+	file = {Bhavsar - Point Cloud Room Estimation for 3D Mesh Placement.pdf:/home/hugop/Zotero/storage/YEC5PAGW/Bhavsar - Point Cloud Room Estimation for 3D Mesh Placement.pdf:application/pdf},
+}
+
+@misc{zhao_object_2019,
+	title = {Object {Detection} with {Deep} {Learning}: {A} {Review}},
+	shorttitle = {Object {Detection} with {Deep} {Learning}},
+	url = {http://arxiv.org/abs/1807.05511},
+	doi = {10.48550/arXiv.1807.05511},
+	abstract = {Due to object detection's close relationship with video analysis and image understanding, it has attracted much research attention in recent years. Traditional object detection methods are built on handcrafted features and shallow trainable architectures. Their performance easily stagnates by constructing complex ensembles which combine multiple low-level image features with high-level context from object detectors and scene classifiers. With the rapid development in deep learning, more powerful tools, which are able to learn semantic, high-level, deeper features, are introduced to address the problems existing in traditional architectures. These models behave differently in network architecture, training strategy and optimization function, etc. In this paper, we provide a review on deep learning based object detection frameworks. Our review begins with a brief introduction on the history of deep learning and its representative tool, namely Convolutional Neural Network (CNN). Then we focus on typical generic object detection architectures along with some modifications and useful tricks to improve detection performance further. As distinct specific detection tasks exhibit different characteristics, we also briefly survey several specific tasks, including salient object detection, face detection and pedestrian detection. Experimental analyses are also provided to compare various methods and draw some meaningful conclusions. Finally, several promising directions and tasks are provided to serve as guidelines for future work in both object detection and relevant neural network based learning systems.},
+	urldate = {2024-02-25},
+	publisher = {arXiv},
+	author = {Zhao, Zhong-Qiu and Zheng, Peng and Xu, Shou-tao and Wu, Xindong},
+	month = apr,
+	year = {2019},
+	note = {arXiv:1807.05511 [cs]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, notion},
+	file = {arXiv Fulltext PDF:/home/hugop/Zotero/storage/FDEVD8X4/Zhao et al. - 2019 - Object Detection with Deep Learning A Review.pdf:application/pdf;arXiv.org Snapshot:/home/hugop/Zotero/storage/NIFJ3BWH/1807.html:text/html},
+}
+
+@book{schmalstieg_augmented_2008,
+	title = {Augmented {Reality} 2.0},
+	isbn = {978-3-211-99177-0},
+	abstract = {Augmented Reality (AR) was first demonstrated in the 1960s, but only recently have technologies emerged that can be used to
+easily deploy AR applications to many users. Camera-equipped cell phones with significant processing power and graphics abilities
+provide an inexpensive and versatile platform for AR applications, while the social networking technology of Web 2.0 provides
+a large-scale infrastructure for collaboratively producing and distributing geo-referenced AR content. This combination of
+widely used mobile hardware and Web 2.0 software allows the development of a new type of AR platform that can be used on a
+global scale. In this paper we describe the Augmented Reality 2.0 concept and present existing work on mobile AR and web technologies
+that could be used to create AR 2.0 applications.},
+	author = {Schmalstieg, Dieter and Langlotz, Tobias and Billinghurst, Mark},
+	month = jan,
+	year = {2008},
+	doi = {10.1007/978-3-211-99178-7_2},
+	note = {Journal Abbreviation: Virtual Realities: Dagstuhl Seminar 2008
+Pages: 37
+Publication Title: Virtual Realities: Dagstuhl Seminar 2008},
+	keywords = {/unread, notion},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/SYU9ZZTT/Schmalstieg et al. - 2008 - Augmented Reality 2.0.pdf:application/pdf},
+}
+
+@article{chen_overview_2019,
+	title = {An overview of augmented reality technology},
+	volume = {1237},
+	issn = {1742-6588, 1742-6596},
+	url = {https://iopscience.iop.org/article/10.1088/1742-6596/1237/2/022082},
+	doi = {10.1088/1742-6596/1237/2/022082},
+	abstract = {Augmented reality is a technology that combines virtual reality with reality. In recent years, the rapid development of augmented reality technology has aroused people's high attention. This paper first expounds the research and progress of augmented reality at home and abroad. Secondly, it introduces the key technologies, development tools and application of augmented reality in some fields. Finally, it looks forward to the future development trend of augmented reality technologies such as AR cloud.},
+	language = {en},
+	number = {2},
+	urldate = {2024-02-25},
+	journal = {Journal of Physics: Conference Series},
+	author = {Chen, Yunqiang and Wang, Qing and Chen, Hong and Song, Xiaoyu and Tang, Hui and Tian, Mengxiao},
+	month = jun,
+	year = {2019},
+	keywords = {notion, exploration},
+	pages = {022082},
+	file = {Chen et al. - 2019 - An overview of augmented reality technology.pdf:/home/hugop/Zotero/storage/4LGTEY3H/Chen et al. - 2019 - An overview of augmented reality technology.pdf:application/pdf},
+}
+
+@article{rabbi_survey_2013,
+	title = {A {Survey} on {Augmented} {Reality} {Challenges} and {Tracking} {Authors}},
+	language = {en},
+	author = {Rabbi, Ihsan and Ullah, Sehat},
+	year = {2013},
+	keywords = {notion, exploration},
+	file = {Rabbi and Ullah - 2013 - A Survey on Augmented Reality Challenges and Track.pdf:/home/hugop/Zotero/storage/GB9FQ2YV/Rabbi and Ullah - 2013 - A Survey on Augmented Reality Challenges and Track.pdf:application/pdf},
+}
+
+@article{li_hybrid_2024,
+	title = {Hybrid {3D} {Reconstruction} of {Indoor} {Scenes} {Integrating} {Object} {Recognition}},
+	volume = {16},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2072-4292},
+	url = {https://www.mdpi.com/2072-4292/16/4/638},
+	doi = {10.3390/rs16040638},
+	abstract = {Indoor 3D reconstruction is particularly challenging due to complex scene structures involving object occlusion and overlap. This paper presents a hybrid indoor reconstruction method that segments the room point cloud into internal and external components, and then reconstructs the room shape and the indoor objects in different ways. We segment the room point cloud into internal and external points based on the assumption that the room shapes are composed of some large external planar structures. For the external, we seek for an appropriate combination of intersecting faces to obtain a lightweight polygonal surface model. For the internal, we define a set of features extracted from the internal points and train a classification model based on random forests to recognize and separate indoor objects. Then, the corresponding computer aided design (CAD) models are placed in the target positions of the indoor objects, converting the reconstruction into a model fitting problem. Finally, the indoor objects and room shapes are combined to generate a complete 3D indoor model. The effectiveness of this method is evaluated on point clouds from different indoor scenes with an average fitting error of about 0.11 m, and the performance is validated by extensive comparisons with state-of-the-art methods.},
+	language = {en},
+	number = {4},
+	urldate = {2024-02-25},
+	journal = {Remote Sensing},
+	author = {Li, Mingfan and Li, Minglei and Xu, Li and Wei, Mingqiang},
+	month = jan,
+	year = {2024},
+	note = {Number: 4
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {notion, indoor modeling, lightweight model, model fitting, point cloud classification, exploration},
+	pages = {638},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/LFKI8FMW/Li et al. - 2024 - Hybrid 3D Reconstruction of Indoor Scenes Integrat.pdf:application/pdf},
+}
+
+@article{fayolle_survey_2024,
+	title = {A {Survey} of {Methods} for {Converting} {Unstructured} {Data} to {CSG} {Models}},
+	volume = {168},
+	issn = {0010-4485},
+	url = {https://www.sciencedirect.com/science/article/pii/S0010448523001872},
+	doi = {10.1016/j.cad.2023.103655},
+	abstract = {The goal of this document is to survey existing methods for recovering or extracting CSG (Constructive Solid Geometry) representations from unstructured data such as 3D point-clouds or polygon meshes. We review and discuss related topics such as the segmentation and fitting of the input data. We cover techniques from solid modeling for the conversion of a polyhedron to a CSG expression and for the conversion of a B-rep to a CSG expression. We look at approaches coming from program synthesis, evolutionary techniques (such as genetic programming or genetic algorithm), and deep learning. Finally, we conclude our survey with a discussion of techniques for the generation of computer programs involving higher-level constructs, representations, and operations for representing solids.},
+	urldate = {2024-02-25},
+	journal = {Computer-Aided Design},
+	author = {Fayolle, Pierre-Alain and Friedrich, Markus},
+	month = mar,
+	year = {2024},
+	keywords = {notion, Constructive solid geometry, Fitting, Point-cloud and polygon soup to CSG conversion, Segmentation, Shape program synthesis, exploration},
+	pages = {103655},
+	file = {ScienceDirect Snapshot:/home/hugop/Zotero/storage/22UT7QUA/S0010448523001872.html:text/html;Submitted Version:/home/hugop/Zotero/storage/KG2CUCGP/Fayolle and Friedrich - 2024 - A Survey of Methods for Converting Unstructured Da.pdf:application/pdf},
+}
+
+@article{kellner_reconstructing_2023,
+	title = {Reconstructing {Geometrical} {Models} of {Indoor} {Environments} {Based} on {Point} {Clouds}},
+	volume = {15},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2072-4292},
+	url = {https://www.mdpi.com/2072-4292/15/18/4421},
+	doi = {10.3390/rs15184421},
+	abstract = {In this paper, we present a workflow that combines supervised and unsupervised methods for the reconstruction of geometric models with architectural information from unordered 3D data. Our method uses a downsampling strategy to enrich features to provide scalability for large datasets, increase robustness, and be independent of the sensor used. A Neural Network is then used to segment the resulting point cloud into basic structures. This removes furniture and clutter and preserves the relevant walls, ceilings, floors, and openings. A 2D projection combined with a graph structure is used to find a Region of Interest within the cleaned point cloud, indicating a potential room. Each detected region is projected back into a 3D data patch to refine the room candidates and allow for more complex room structures. The resulting patches are fitted with a polygon using geometric approaches. In addition, architectural features, such as windows and doors, are added to the polygon. To demonstrate that the presented approach works and that the network provides usable results, even with changing data sources, we tested the approach in different real-world scenarios with different sensor systems.},
+	language = {en},
+	number = {18},
+	urldate = {2024-02-25},
+	journal = {Remote Sensing},
+	author = {Kellner, Maximilian and Stahl, Bastian and Reiterer, Alexander},
+	month = jan,
+	year = {2023},
+	note = {Number: 18
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {/unread, notion, exploration, deep learning, point cloud, Scan-to-BIM, scene understanding},
+	pages = {4421},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/IED2EJTV/Kellner et al. - 2023 - Reconstructing Geometrical Models of Indoor Enviro.pdf:application/pdf},
+}
+
+@article{liu_sharp_2023,
+	title = {Sharp {Feature}-{Preserving} {3D} {Mesh} {Reconstruction} from {Point} {Clouds} {Based} on {Primitive} {Detection}},
+	volume = {15},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2072-4292},
+	url = {https://www.mdpi.com/2072-4292/15/12/3155},
+	doi = {10.3390/rs15123155},
+	abstract = {High-fidelity mesh reconstruction from point clouds has long been a fundamental research topic in computer vision and computer graphics. Traditional methods require dense triangle meshes to achieve high fidelity, but excessively dense triangles may lead to unnecessary storage and computational burdens, while also struggling to capture clear, sharp, and continuous edges. This paper argues that the key to high-fidelity reconstruction lies in preserving sharp features. Therefore, we introduce a novel sharp-feature-preserving reconstruction framework based on primitive detection. It includes an improved deep-learning-based primitive detection module and two novel mesh splitting and selection modules that we propose. Our framework can accurately and reasonably segment primitive patches, fit meshes in each patch, and split overlapping meshes at the triangle level to ensure true sharpness while obtaining lightweight mesh models. Quantitative and visual experimental results demonstrate that our framework outperforms both the state-of-the-art learning-based primitive detection methods and traditional reconstruction methods. Moreover, our designed modules are plug-and-play, which not only apply to learning-based primitive detectors but also can be combined with other point cloud processing tasks such as edge extraction or random sample consensus (RANSAC) to achieve high-fidelity results.},
+	language = {en},
+	number = {12},
+	urldate = {2024-02-25},
+	journal = {Remote Sensing},
+	author = {Liu, Qi and Xu, Shibiao and Xiao, Jun and Wang, Ying},
+	month = jan,
+	year = {2023},
+	note = {Number: 12
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {/unread, notion, mesh reconstruction, point clouds, primitive detection, sharp feature},
+	pages = {3155},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/7ZQFHRGQ/Liu et al. - 2023 - Sharp Feature-Preserving 3D Mesh Reconstruction fr.pdf:application/pdf},
+}
+
+@article{schnabel_octree-based_nodate,
+	title = {Octree-based {Point}-{Cloud} {Compression}},
+	abstract = {In this paper we present a progressive compression method for point sampled models that is speciﬁcally apt at dealing with densely sampled surface geometry. The compression is lossless and therefore is also suitable for storing the unﬁltered, raw scan data. Our method is based on an octree decomposition of space. The point-cloud is encoded in terms of occupied octree-cells. To compress the octree we employ novel prediction techniques that were speciﬁcally designed for point sampled geometry and are based on local surface approximations to achieve high compression rates that outperform previous progressive coders for point-sampled geometry. Moreover we demonstrate that additional point attributes, such as color, which are of great importance for point-sampled geometry, can be well integrated and efﬁciently encoded in this framework.},
+	language = {en},
+	author = {Schnabel, Ruwen and Klein, Reinhard},
+	keywords = {fundamentals},
+	file = {Schnabel and Klein - Octree-based Point-Cloud Compression.pdf:/home/hugop/Zotero/storage/L3QHFUGK/Schnabel and Klein - Octree-based Point-Cloud Compression.pdf:application/pdf},
 }
