--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -315,3 +315,30 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {fundamentals},
 	file = {Schnabel and Klein - Octree-based Point-Cloud Compression.pdf:/home/hugop/Zotero/storage/L3QHFUGK/Schnabel and Klein - Octree-based Point-Cloud Compression.pdf:application/pdf},
 }
+
+@article{gabriel_zachmann_geometric_2002,
+	title = {Geometric {Data} {Structures} for {Computer} {Graphics}},
+	abstract = {The goal of this tutorial is to present a wide range of geometric data structures, algorithms and techniques from computational geometry to computer graphics practitioners. To achieve this goal we introduce several data structures, discuss their complexity, point out construction schemes and the corresponding performance and present standard applications in two and three dimensions.},
+	language = {en},
+	journal = {The Eurographics Association},
+	author = {{Gabriel Zachmann} and {Elmar Langetepe}},
+	year = {2002},
+	keywords = {fundamentals},
+	file = {Zachmann - Geometric Data Structures for Computer Graphics.pdf:/home/hugop/Zotero/storage/TRQWNE97/Zachmann - Geometric Data Structures for Computer Graphics.pdf:application/pdf},
+}
+
+@inproceedings{beazley_swig_1996,
+	title = {{SWIG}: {An} {Easy} to {Use} {Tool} for {Integrating} {Scripting} {Languages} with {C} and {C}++},
+	volume = {43},
+	shorttitle = {{SWIG}},
+	url = {https://www.semanticscholar.org/paper/SWIG%3A-An-Easy-to-Use-Tool-for-Integrating-Scripting-Beazley/29c88180b5b146e92d94fa73a581b3b8acaf58ee},
+	abstract = {I present SWIG (Simplified Wrapper and Interface Generator), a program development tool that automatically generates the bindings between C/C++ code and common scripting languages including Tcl, Python, Perl and Guile. SWIG supports most C/C++ datatypes including pointers, structures, and classes. Unlike many other approaches, SWIG uses ANSI C/C++ declarations and requires the user to make virtually no modifications to the underlying C code. In addition, SWIG automatically produces documentation in HTML, LaTeX, or ASCII format. SWIG has been primarily designed for scientists, engineers, and application developers who would like to use scripting languages with their C/C++ programs without worrying about the underlying implementation details of each language or using a complicated software development tool. This paper concentrates on SWIG's use with Tcl/Tk.},
+	urldate = {2024-04-02},
+	booktitle = {Tcl/{Tk} {Workshop}},
+	author = {Beazley, D.},
+	month = jul,
+	year = {1996},
+	keywords = {fundamentals},
+	pages = {74},
+	file = {SWIG \: An Easy to Use Tool For Integrating Scriptint Languages with C and C++:/home/hugop/Zotero/storage/RXPS93DY/index.html:text/html},
+}
