--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -85,12 +85,11 @@
 	address = {Erscheinungsort nicht ermittelbar},
 	title = {Learn {OpenGL} - {Graphics} programming: {Learn} modern {OpenGL} graphics programming in a step-by-step fashion},
 	isbn = {978-90-90-33256-7},
-	shorttitle = {Learn {OpenGL} - {Graphics} programming},
+	shorttitle = {Learn {OpenGL}},
 	abstract = {Graphics programmers are often coined the 'wizards' of the game industry. As every magician knows, terms like wizardry and magic are often somewhat exaggerated. Yet, there is a certain charm to graphics programming: the ability to conjure up complete living worlds at our fingertips. Learn OpenGL will teach you the basics, the intermediate, and tons of advanced knowledge, using modern (core-profile) OpenGL. The aim of this book is to show you all there is to modern OpenGL in an easy-to-understand fashion, with clear examples and step-by-step instructions, while also providing a useful reference for later studies. After years of continuous work and improvements on the accompanying website learnopengl.com, with the help of thousands of readers, its content has been professionally revised for this physical copy you now find in your hands. Graphics programming isn't as hard as many people make it out to be... you just need to start},
 	language = {eng},
 	publisher = {Kendall \& Welling},
 	author = {de Vries, Joey},
-	month = jun,
 	year = {2020},
 	keywords = {notion, fundamentals},
 	file = {Vries - 2020 - Learn OpenGL - Graphics programming Learn modern .pdf:/home/hugop/Zotero/storage/4ZL4T74G/Vries - 2020 - Learn OpenGL - Graphics programming Learn modern .pdf:application/pdf},
@@ -341,4 +340,55 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {fundamentals},
 	pages = {74},
 	file = {SWIG \: An Easy to Use Tool For Integrating Scriptint Languages with C and C++:/home/hugop/Zotero/storage/RXPS93DY/index.html:text/html},
+}
+
+@article{duda_use_1972,
+	title = {Use of the {Hough} transformation to detect lines and curves in pictures},
+	volume = {15},
+	issn = {0001-0782},
+	url = {https://dl.acm.org/doi/10.1145/361237.361242},
+	doi = {10.1145/361237.361242},
+	abstract = {Hough has proposed an interesting and computationally efficient procedure for detecting lines in pictures. This paper points out that the use of angle-radius rather than slope-intercept parameters simplifies the computation further. It also shows how the method can be used for more general curve fitting, and gives alternative interpretations that explain the source of its efficiency.},
+	number = {1},
+	urldate = {2024-04-18},
+	journal = {Communications of the ACM},
+	author = {Duda, Richard O. and Hart, Peter E.},
+	month = jan,
+	year = {1972},
+	keywords = {fundamentals, colinear points, curve detection, Hough transformation, line detection, pattern recognition, picture processing, point-line transformation},
+	pages = {11--15},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/9TCMDK8F/Duda and Hart - 1972 - Use of the Hough transformation to detect lines an.pdf:application/pdf},
+}
+
+@article{fischler_random_1981,
+	title = {Random sample consensus: a paradigm for model fitting with applications to image analysis and automated cartography},
+	volume = {24},
+	issn = {0001-0782},
+	shorttitle = {Random sample consensus},
+	url = {https://dl.acm.org/doi/10.1145/358669.358692},
+	doi = {10.1145/358669.358692},
+	abstract = {A new paradigm, Random Sample Consensus (RANSAC), for fitting a model to experimental data is introduced. RANSAC is capable of interpreting/smoothing data containing a significant percentage of gross errors, and is thus ideally suited for applications in automated image analysis where interpretation is based on the data provided by error-prone feature detectors. A major portion of this paper describes the application of RANSAC to the Location Determination Problem (LDP): Given an image depicting a set of landmarks with known locations, determine that point in space from which the image was obtained. In response to a RANSAC requirement, new results are derived on the minimum number of landmarks needed to obtain a solution, and algorithms are presented for computing these minimum-landmark solutions in closed form. These results provide the basis for an automatic system that can solve the LDP under difficult viewing},
+	number = {6},
+	urldate = {2024-04-18},
+	journal = {Communications of the ACM},
+	author = {Fischler, Martin A. and Bolles, Robert C.},
+	month = jun,
+	year = {1981},
+	keywords = {automated cartography, camera calibration, fundamentals, image matching, location determination, model fitting, scene analysis},
+	pages = {381--395},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/3G456BLJ/Fischler and Bolles - 1981 - Random sample consensus a paradigm for model fitt.pdf:application/pdf},
+}
+
+@patent{hough_method_1962,
+	title = {Method and means for recognizing complex patterns},
+	url = {https://patents.google.com/patent/US3069654A/en},
+	nationality = {US},
+	assignee = {Individual},
+	number = {US3069654A},
+	urldate = {2024-04-18},
+	author = {Hough, Paul V. C.},
+	month = dec,
+	year = {1962},
+	keywords = {framelet, fundamentals, line, microsecond, pulse, segment},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/DAK4WK3V/Hough - 1962 - Method and means for recognizing complex patterns.pdf:application/pdf},
 }
