Add data for noise + missing

--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -374,7 +374,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	author = {Fischler, Martin A. and Bolles, Robert C.},
 	month = jun,
 	year = {1981},
-	keywords = {automated cartography, camera calibration, fundamentals, image matching, location determination, model fitting, scene analysis},
+	keywords = {model fitting, fundamentals, automated cartography, camera calibration, image matching, location determination, scene analysis},
 	pages = {381--395},
 	file = {Full Text PDF:/home/hugop/Zotero/storage/3G456BLJ/Fischler and Bolles - 1981 - Random sample consensus a paradigm for model fitt.pdf:application/pdf},
 }
@@ -389,6 +389,74 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	author = {Hough, Paul V. C.},
 	month = dec,
 	year = {1962},
-	keywords = {framelet, fundamentals, line, microsecond, pulse, segment},
+	keywords = {fundamentals, framelet, line, microsecond, pulse, segment},
 	file = {Full Text PDF:/home/hugop/Zotero/storage/DAK4WK3V/Hough - 1962 - Method and means for recognizing complex patterns.pdf:application/pdf},
+}
+
+@inproceedings{woodford_contraction_2012,
+	address = {Berlin, Heidelberg},
+	title = {Contraction {Moves} for {Geometric} {Model} {Fitting}},
+	isbn = {978-3-642-33786-4},
+	doi = {10.1007/978-3-642-33786-4_14},
+	abstract = {This paper presents a new class of moves, called α-expansion-contraction, which generalizes α-expansion graph cuts for multi-label energy minimization problems. The new moves are particularly useful for optimizing the assignments in model fitting frameworks whose energies include Label Cost (LC), as well as Markov Random Field (MRF) terms. These problems benefit from the contraction moves’ greater scope for removing instances from the model, reducing label costs. We demonstrate this effect on the problem of fitting sets of geometric primitives to point cloud data, including real-world point clouds containing millions of points, obtained by multi-view reconstruction.},
+	language = {en},
+	booktitle = {Computer {Vision} – {ECCV} 2012},
+	publisher = {Springer},
+	author = {Woodford, Oliver J. and Pham, Minh-Tri and Maki, Atsuto and Gherardi, Riccardo and Perbet, Frank and Stenger, Björn},
+	editor = {Fitzgibbon, Andrew and Lazebnik, Svetlana and Perona, Pietro and Sato, Yoichi and Schmid, Cordelia},
+	year = {2012},
+	keywords = {fundamentals},
+	pages = {181--194},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/2JZXRWE7/Woodford et al. - 2012 - Contraction Moves for Geometric Model Fitting.pdf:application/pdf},
+}
+
+@inproceedings{milgram_augmented_1995,
+	address = {Boston, MA},
+	title = {Augmented reality: a class of displays on the reality-virtuality continuum},
+	shorttitle = {Augmented reality},
+	url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=981543},
+	doi = {10.1117/12.197321},
+	abstract = {In this paper we discuss Augmented Reality (AR) displays in a general sense, within the context of a Reality-Virtuality (RV) continuum, encompassing a large class of "Mixed Reality" (MR) displays, which also includes Augmented Virtuality (AV). MR displays are defined by means of seven examples of existing display concepts in which real objects and virtual objects are juxtaposed. Essential factors which distinguish different Mixed Reality display systems from each other are presented, first by means of a table in which the nature of the underlying scene, how it is viewed, and the observer's reference to it are compared, and then by means of a three dimensional taxonomic framework, comprising: Extent of World Knowledge (EWK), Reproduction Fidelity (RF) and Extent of Presence Metaphor (EPM). A principal objective of the taxonomy is to clarify terminology issues and to provide a framework for classifying research across different disciplines.},
+	language = {en},
+	urldate = {2024-04-23},
+	author = {Milgram, Paul and Takemura, Haruo and Utsumi, Akira and Kishino, Fumio},
+	editor = {Das, Hari},
+	month = dec,
+	year = {1995},
+	keywords = {fundamentals},
+	pages = {282--292},
+	file = {Milgram et al. - 1995 - Augmented reality a class of displays on the real.pdf:/home/hugop/Zotero/storage/JUUSHE6M/Milgram et al. - 1995 - Augmented reality a class of displays on the real.pdf:application/pdf},
+}
+
+@article{graham_efficient_1972,
+	title = {An efficient algorith for determining the convex hull of a finite planar set},
+	volume = {1},
+	issn = {0020-0190},
+	url = {https://www.sciencedirect.com/science/article/pii/0020019072900452},
+	doi = {10.1016/0020-0190(72)90045-2},
+	number = {4},
+	urldate = {2024-04-26},
+	journal = {Information Processing Letters},
+	author = {Graham, R. L.},
+	month = jun,
+	year = {1972},
+	pages = {132--133},
+	file = {Graham.pdf:/home/hugop/Zotero/storage/HPLRTK8A/Graham.pdf:application/pdf;ScienceDirect Snapshot:/home/hugop/Zotero/storage/4GWYA4CN/0020019072900452.html:text/html},
+}
+
+@article{andrew_another_1979,
+	title = {Another efficient algorithm for convex hulls in two dimensions},
+	volume = {9},
+	issn = {0020-0190},
+	url = {https://www.sciencedirect.com/science/article/pii/0020019079900723},
+	doi = {10.1016/0020-0190(79)90072-3},
+	number = {5},
+	urldate = {2024-04-26},
+	journal = {Information Processing Letters},
+	author = {Andrew, A. M.},
+	month = dec,
+	year = {1979},
+	keywords = {Convex hull},
+	pages = {216--219},
+	file = {ScienceDirect Snapshot:/home/hugop/Zotero/storage/YKGVKTUL/0020019079900723.html:text/html},
 }
