--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -460,3 +460,17 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	pages = {216--219},
 	file = {ScienceDirect Snapshot:/home/hugop/Zotero/storage/YKGVKTUL/0020019079900723.html:text/html},
 }
+
+@book{glassner_graphics_1994,
+	address = {San Diego},
+	edition = {Reissue edition},
+	title = {Graphics {Gems}},
+	isbn = {978-0-12-286166-6},
+	abstract = {"The GRAPHICS GEMS Series" was started in 1990 by Andrew Glassner. The vision and purpose of the Series was - and still is - to provide tips, techniques, and algorithms for graphics programmers. All of the gems are written by programmers who work in the field and are motivated by a common desire to share interesting ideas and tools with their colleagues. Each volume provides a new set of innovative solutions to a variety of programming problems.},
+	language = {English},
+	publisher = {Morgan Kaufmann},
+	author = {Glassner, Andrew S.},
+	month = jan,
+	year = {1994},
+	file = {AP Professional (Firm) and Electrographics Electronic Imaging (Firm) - 1995 - The AP Professional graphics CD-ROM.pdf:/home/hugop/Zotero/storage/YCU4PUDR/AP Professional (Firm) and Electrographics Electronic Imaging (Firm) - 1995 - The AP Professional graphics CD-ROM.pdf:application/pdf},
+}
