--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -474,3 +474,84 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	year = {1994},
 	file = {AP Professional (Firm) and Electrographics Electronic Imaging (Firm) - 1995 - The AP Professional graphics CD-ROM.pdf:/home/hugop/Zotero/storage/YCU4PUDR/AP Professional (Firm) and Electrographics Electronic Imaging (Firm) - 1995 - The AP Professional graphics CD-ROM.pdf:application/pdf},
 }
+
+@book{samet_design_1989,
+	address = {Reading, Mass},
+	title = {The {Design} and {Analysis} of {Spatial} {Data} {Structures}},
+	isbn = {978-0-201-50255-8},
+	language = {English},
+	publisher = {Addison Wesley},
+	author = {Samet, Hanan},
+	month = aug,
+	year = {1989},
+	file = {The Design And Analysis Of Spatial Data Structures - Hanan Samet.pdf:/home/hugop/Zotero/storage/BWL5MTN9/The Design And Analysis Of Spatial Data Structures - Hanan Samet.pdf:application/pdf},
+}
+
+@article{finkel_quad_1974,
+	title = {Quad trees a data structure for retrieval on composite keys},
+	volume = {4},
+	issn = {1432-0525},
+	url = {https://doi.org/10.1007/BF00288933},
+	doi = {10.1007/BF00288933},
+	abstract = {The quad tree is a data structure appropriate for storing information to be retrieved on composite keys. We discuss the specific case of two-dimensional retrieval, although the structure is easily generalised to arbitrary dimensions. Algorithms are given both for staightforward insertion and for a type of balanced insertion into quad trees. Empirical analyses show that the average time for insertion is logarithmic with the tree size. An algorithm for retrieval within regions is presented along with data from empirical studies which imply that searching is reasonably efficient. We define an optimized tree and present an algorithm to accomplish optimization in n log n time. Searching is guaranteed to be fast in optimized trees. Remaining problems include those of deletion from quad trees and merging of quad trees, which seem to be inherently difficult operations.},
+	language = {en},
+	number = {1},
+	urldate = {2024-05-20},
+	journal = {Acta Informatica},
+	author = {Finkel, R. A. and Bentley, J. L.},
+	month = mar,
+	year = {1974},
+	keywords = {Communication Network, Data Structure, Empirical Study, Information System, Operating System},
+	pages = {1--9},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/3ZJU87KV/Finkel and Bentley - 1974 - Quad Trees A Data Structure for Retrieval on Comp.pdf:application/pdf},
+}
+
+@article{klinker_augmented_nodate,
+	title = {Augmented {Reality} {II} - {Camera} {Calibration} -},
+	language = {en},
+	author = {Klinker, Gudrun},
+	file = {Klinker - Augmented Reality II - Camera Calibration -.pdf:/home/hugop/Zotero/storage/4GBKBHEE/Klinker - Augmented Reality II - Camera Calibration -.pdf:application/pdf},
+}
+
+@incollection{mehler-bicher_augmented_2022,
+	title = {Augmented {Reality}: {Theorie} und {Praxis}},
+	copyright = {De Gruyter expressly reserves the right to use all content for commercial text and data mining within the meaning of Section 44b of the German Copyright Act.},
+	isbn = {978-3-11-075650-0},
+	shorttitle = {Augmented {Reality}},
+	url = {https://www.degruyter.com/document/doi/10.1515/9783110756500/html},
+	abstract = {As an extension of the real world and as virtual objects, augmented reality is a typical example of an innovative technology. This book looks at examples to reveal the potential that this technology has for various areas of application. The new edition incorporates more best-practice insights. It also addresses the interplay between augmented reality and current technologies like big data and artificial intelligence.},
+	language = {de},
+	urldate = {2024-05-21},
+	booktitle = {Augmented {Reality}},
+	publisher = {De Gruyter Oldenbourg},
+	author = {Mehler-Bicher, Anett and Steiger, Lothar},
+	month = may,
+	year = {2022},
+	doi = {10.1515/9783110756500},
+	keywords = {Avatar, Interface, Living Game, Marker, Rendering, Tracking},
+	file = {10.1515_9783110756500.pdf:/home/hugop/Zotero/storage/GF4C42W5/10.1515_9783110756500.pdf:application/pdf;Full Text PDF:/home/hugop/Zotero/storage/2U27WC6U/Mehler-Bicher and Steiger - 2022 - Augmented Reality Theorie und Praxis.pdf:application/pdf},
+}
+
+@book{dorner_virtual_2019,
+	address = {Berlin, Heidelberg},
+	title = {Virtual und {Augmented} {Reality} ({VR}/{AR}): {Grundlagen} und {Methoden} der {Virtuellen} und {Augmentierten} {Realität}},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {978-3-662-58860-4 978-3-662-58861-1},
+	shorttitle = {Virtual und {Augmented} {Reality} ({VR}/{AR})},
+	url = {http://link.springer.com/10.1007/978-3-662-58861-1},
+	language = {de},
+	urldate = {2024-05-21},
+	publisher = {Springer},
+	editor = {Dörner, Ralf and Broll, Wolfgang and Grimm, Paul and Jung, Bernhard},
+	year = {2019},
+	doi = {10.1007/978-3-662-58861-1},
+	keywords = {Augmented Reality, Augmentierte Realität, Buch Virtuelle und Augmentierte Realität, Computer Graphics, Computer Vision, Computergrafik, Grundlagen, Human Computer Interaction, Interactive Systems, Selbststudium, Studierende, Technologie, Virtual Reality, Virtual und Augmented Reality (VR / AR), Virtuelle Realität, VR},
+	file = {Dörner et al. - 2019 - Virtual und Augmented Reality (VRAR) Grundlagen .pdf:/home/hugop/Zotero/storage/3UNK5C6Z/Dörner et al. - 2019 - Virtual und Augmented Reality (VRAR) Grundlagen .pdf:application/pdf},
+}
+
+@article{szeliski_computer_nodate,
+	title = {Computer {Vision}: {Algorithms} and {Applications}, 2nd {Edition}},
+	language = {en},
+	author = {Szeliski, Richard},
+	file = {Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:/home/hugop/Zotero/storage/PHYTJX8L/Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:application/pdf},
+}
