--- a/ba/defs.tex
+++ b/ba/defs.tex
@@ -85,7 +85,8 @@
 
 % zum Erstellen des Literaturverzeichnisses; der gängige Stil APA ist hier
 % bereits eingestellt
-\usepackage[style=apa]{biblatex}
+\usepackage[style=alphabetic]{biblatex}
+
 % eine Beispieldatei für ein Literaturverzeichnis
 \addbibresource{ba.bib}
 
