--- a/ba/defs.tex
+++ b/ba/defs.tex
@@ -85,7 +85,7 @@
 
 % zum Erstellen des Literaturverzeichnisses; der gängige Stil APA ist hier
 % bereits eingestellt
-\usepackage[style=alphabetic]{biblatex}
+\usepackage[style=alphabetic, doi=false,isbn=false,url=false,eprint=false]{biblatex}
 
 % eine Beispieldatei für ein Literaturverzeichnis
 \addbibresource{ba.bib}
