--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -546,3 +546,11 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	file = {Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:/home/hugop/Zotero/storage/PHYTJX8L/Szeliski - Computer Vision Algorithms and Applications, 2nd .pdf:application/pdf},
 }
+
+@unpublished{kris_kitani_computer_2017,
+	location = {Carnegie Mellon University Robotics Institute},
+	title = {Computer Vision - Lecture 8.2: Camera Matrix},
+	author = {{Kris Kitani}},
+	date = {2017},
+	file = {11.1_Camera_matrix.pdf:/home/hugop/Zotero/storage/QIX4W8BN/11.1_Camera_matrix.pdf:application/pdf},
+}
