Perspective Project and Camera Matrix

--- a/ba/images/intrinsics2d.tex
+++ b/ba/images/intrinsics2d.tex
@@ -7,7 +7,7 @@
 
     % Coordinate system
     \draw[shorten >=2pt, shorten <=2pt] (0,0) -- (3,0);
-    \draw[-{Stealth[round]}, shorten <=2pt] (3,0) -- (6,0) node[anchor=north] {$z_c$};
+    \draw[-{Stealth[round]}, shorten <=2pt] (3,0) -- (6,0) node[anchor=north] {$-z_c$};
     \draw[-{Stealth[round]}, shorten <=2pt] (0,0) -- (0,4) node[anchor=east] {$y_c$};
 
 
