Convex hull algorithms

--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -554,3 +554,63 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	date = {2017},
 	file = {11.1_Camera_matrix.pdf:/home/hugop/Zotero/storage/QIX4W8BN/11.1_Camera_matrix.pdf:application/pdf},
 }
+
+@article{chan_optimal_1996,
+	title = {Optimal output-sensitive convex hull algorithms in two and three dimensions},
+	volume = {16},
+	issn = {1432-0444},
+	url = {https://doi.org/10.1007/BF02712873},
+	doi = {10.1007/BF02712873},
+	abstract = {We present simple output-sensitive algorithms that construct the convex hull of a set ofn points in two or three dimensions in worst-case {optimalO} (n logh) time {andO} (n) space, whereh denotes the number of vertices of the convex hull.},
+	pages = {361--368},
+	number = {4},
+	journaltitle = {Discrete \& Computational Geometry},
+	shortjournal = {Discrete Comput Geom},
+	author = {Chan, T. M.},
+	urldate = {2024-06-22},
+	date = {1996-04-01},
+	langid = {english},
+	keywords = {Computational Geometry, Convex Hull, Convex Polygon, Discrete Comput Geom, Lower Envelope},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/57ZIGQXE/Chan - 1996 - Optimal output-sensitive convex hull algorithms in.pdf:application/pdf},
+}
+
+@book{de_berg_computational_2008,
+	location = {Berlin, Heidelberg},
+	title = {Computational Geometry: Algorithms and Applications},
+	rights = {http://www.springer.com/tdm},
+	isbn = {978-3-540-77973-5 978-3-540-77974-2},
+	url = {http://link.springer.com/10.1007/978-3-540-77974-2},
+	shorttitle = {Computational Geometry},
+	publisher = {Springer Berlin Heidelberg},
+	author = {De Berg, Mark and Cheong, Otfried and Van Kreveld, Marc and Overmars, Mark},
+	urldate = {2024-06-22},
+	date = {2008},
+	langid = {english},
+	doi = {10.1007/978-3-540-77974-2},
+	file = {De Berg et al. - 2008 - Computational Geometry Algorithms and Application.pdf:/home/hugop/Zotero/storage/JGMSLF72/De Berg et al. - 2008 - Computational Geometry Algorithms and Application.pdf:application/pdf},
+}
+
+@inreference{noauthor_graham_2024,
+	title = {Graham scan},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://en.wikipedia.org/w/index.php?title=Graham_scan&oldid=1219560976},
+	abstract = {Graham's scan is a method of finding the convex hull of a finite set of points in the plane with time complexity O(n log n). It is named after Ronald Graham, who published the original algorithm in 1972. The algorithm finds all vertices of the convex hull ordered along its boundary. It uses a stack to detect and remove concavities in the boundary efficiently.},
+	booktitle = {Wikipedia},
+	urldate = {2024-06-22},
+	date = {2024-04-18},
+	langid = {english},
+	note = {Page Version {ID}: 1219560976 skipbib:true},
+	file = {Snapshot:/home/hugop/Zotero/storage/BK2WGTK5/Graham_scan.html:text/html},
+}
+
+@online{noauthor_convex_2013,
+	title = {Convex Hull using Graham Scan},
+	url = {https://www.geeksforgeeks.org/convex-hull-using-graham-scan/},
+	abstract = {A Computer Science portal for geeks. It contains well written, well thought and well explained computer science and programming articles, quizzes and practice/competitive programming/company interview Questions.},
+	titleaddon = {{GeeksforGeeks}},
+	urldate = {2024-06-22},
+	date = {2013-07-24},
+	langid = {american},
+	note = {Section: {DSA}},
+	file = {Snapshot:/home/hugop/Zotero/storage/7NCLM8FF/convex-hull-using-graham-scan.html:text/html},
+}
