Solution details intro

--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -614,3 +614,12 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	note = {Section: {DSA}},
 	file = {Snapshot:/home/hugop/Zotero/storage/7NCLM8FF/convex-hull-using-graham-scan.html:text/html},
 }
+
+@software{daniel_girardeau-montaut_cloudcompare_nodate,
+	title = {{CloudCompare} [{GPL} software]},
+	rights = {{GPL} software},
+	url = {http://www.cloudcompare.org/},
+	version = {2.x},
+	author = {{Daniel Girardeau-Montaut} and {Andy Maloney} and {Romain Janvier} and {Chris Brown}},
+	note = {Retrieved from http://www.cloudcompare.org/},
+}
