--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -623,3 +623,43 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	author = {{Daniel Girardeau-Montaut} and {Andy Maloney} and {Romain Janvier} and {Chris Brown}},
 	note = {Retrieved from http://www.cloudcompare.org/},
 }
+
+@unpublished{shree_k_nayar_first_2021,
+	location = {Department of Computer Science, Columbia University in the City of New York},
+	title = {First Principles of Computer Vision - Hough Transform},
+	url = {https://fpcv.cs.columbia.edu/},
+	author = {{Shree K. Nayar}},
+	urldate = {2024-07-03},
+	date = {2021},
+	file = {fpcv.cs.columbia.edu:/home/hugop/Zotero/storage/H977A4SV/fpcv.cs.columbia.edu.html:text/html},
+}
+
+@article{ballard_generalizing_1981,
+	title = {Generalizing the Hough transform to detect arbitrary shapes},
+	volume = {13},
+	issn = {0031-3203},
+	url = {https://www.sciencedirect.com/science/article/pii/0031320381900091},
+	doi = {10.1016/0031-3203(81)90009-1},
+	abstract = {The Hough transform is a method for detecting curves by exploiting the duality between points on a curve and parameters of that curve. The initial work showed how to detect both analytic curves(1,2) and non-analytic curves,(3) but these methods were restricted to binary edge images. This work was generalized to the detection of some analytic curves in grey level images, specifically lines,(4) circles(5) and parabolas.(6) The line detection case is the best known of these and has been ingeniously exploited in several applications.(7,8,9) We show how the boundaries of an arbitrary non-analytic shape can be used to construct a mapping between image space and Hough transform space. Such a mapping can be exploited to detect instances of that particular shape in an image. Furthermore, variations in the shape such as rotations, scale changes or figure ground reversals correspond to straightforward transformations of this mapping. However, the most remarkable property is that such mappings can be composed to build mappings for complex shapes from the mappings of simpler component shapes. This makes the generalized Hough transform a kind of universal transform which can be used to find arbitrarily complex shapes.},
+	pages = {111--122},
+	number = {2},
+	journaltitle = {Pattern Recognition},
+	shortjournal = {Pattern Recognition},
+	author = {Ballard, D. H.},
+	urldate = {2024-07-03},
+	date = {1981-01-01},
+	keywords = {Hough transform, Image processing, Parallel algorithms, Pattern recognition, Shape recognition},
+	file = {ScienceDirect Snapshot:/home/hugop/Zotero/storage/6WERCVFM/0031320381900091.html:text/html;Submitted Version:/home/hugop/Zotero/storage/QXLXHG9N/Ballard - 1981 - Generalizing the Hough transform to detect arbitra.pdf:application/pdf},
+}
+
+@article{woodford_demisting_2014,
+	title = {Demisting the Hough Transform for 3D Shape Recognition and Registration},
+	volume = {106},
+	doi = {10.1007/s11263-013-0623-2},
+	abstract = {In applying the Hough transform to the problem of 3D shape recognition and registration, we develop two new and powerful improvements to this popular inference method. The first, intrinsic Hough, solves the problem of exponential memory requirements of the standard Hough transform by exploiting the sparsity of the Hough space. The second, minimum-entropy Hough, explains away incorrect votes, substantially reducing the number of modes in the posterior distribution of class and pose, and improving precision. Our experiments demonstrate that these contributions make the Hough transform not only tractable but also highly accurate for our example application. Both contributions can be applied to other tasks that already use the standard Hough transform.},
+	journaltitle = {International Journal of Computer Vision},
+	shortjournal = {International Journal of Computer Vision},
+	author = {Woodford, Oliver and Pham, Minh-Tri and Maki, Atsuto and Perbet, Frank and Stenger, Bjorn},
+	date = {2014-02-01},
+	file = {Full Text PDF:/home/hugop/Zotero/storage/LPBJWRUQ/Woodford et al. - 2014 - Demisting the Hough Transform for 3D Shape Recogni.pdf:application/pdf},
+}
