Add image sources

--- a/ba/defs.tex
+++ b/ba/defs.tex
@@ -29,6 +29,7 @@
     parskip=half-
 ]{scrreprt}
 
+
 \usepackage{subcaption}
 % Beschriftungen für Tabellen kommen linksbündig über die Tabelle
 \KOMAoption{captions}{tableheading}
@@ -137,3 +138,9 @@
     in Depth Data from the
     Google ARCore Depth API
 }}
+\hypersetup{
+    linkcolor=black, % Color of internal links (sections, pages, etc.)
+    citecolor=black, % Color of citation links
+    filecolor=black, % Color of file links
+    urlcolor=black   % Color of external links
+}
