Evaluation on real data

--- a/ba/ba.bib
+++ b/ba/ba.bib
@@ -648,7 +648,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	author = {Ballard, D. H.},
 	urldate = {2024-07-03},
 	date = {1981-01-01},
-	keywords = {Hough transform, Image processing, Parallel algorithms, Pattern recognition, Shape recognition},
+	keywords = {Image processing, Hough transform, Parallel algorithms, Pattern recognition, Shape recognition},
 	file = {ScienceDirect Snapshot:/home/hugop/Zotero/storage/6WERCVFM/0031320381900091.html:text/html;Submitted Version:/home/hugop/Zotero/storage/QXLXHG9N/Ballard - 1981 - Generalizing the Hough transform to detect arbitra.pdf:application/pdf},
 }
 
@@ -662,4 +662,22 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	author = {Woodford, Oliver and Pham, Minh-Tri and Maki, Atsuto and Perbet, Frank and Stenger, Bjorn},
 	date = {2014-02-01},
 	file = {Full Text PDF:/home/hugop/Zotero/storage/LPBJWRUQ/Woodford et al. - 2014 - Demisting the Hough Transform for 3D Shape Recogni.pdf:application/pdf},
+}
+
+@article{besl_method_1992,
+	title = {A method for registration of 3-D shapes},
+	volume = {14},
+	issn = {1939-3539},
+	url = {https://ieeexplore.ieee.org/document/121791},
+	doi = {10.1109/34.121791},
+	abstract = {The authors describe a general-purpose, representation-independent method for the accurate and computationally efficient registration of 3-D shapes including free-form curves and surfaces. The method handles the full six degrees of freedom and is based on the iterative closest point ({ICP}) algorithm, which requires only a procedure to find the closest point on a geometric entity to a given point. The {ICP} algorithm always converges monotonically to the nearest local minimum of a mean-square distance metric, and the rate of convergence is rapid during the first few iterations. Therefore, given an adequate set of initial rotations and translations for a particular class of objects with a certain level of 'shape complexity', one can globally minimize the mean-square distance metric over all six degrees of freedom by testing each initial registration. One important application of this method is to register sensed data from unfixtured rigid objects with an ideal geometric model, prior to shape inspection. Experimental results show the capabilities of the registration algorithm on point sets, curves, and surfaces.{\textless}{\textgreater}},
+	pages = {239--256},
+	number = {2},
+	journaltitle = {{IEEE} Transactions on Pattern Analysis and Machine Intelligence},
+	author = {Besl, P.J. and {McKay}, Neil D.},
+	urldate = {2024-07-09},
+	date = {1992-02},
+	note = {Conference Name: {IEEE} Transactions on Pattern Analysis and Machine Intelligence},
+	keywords = {Convergence, Inspection, Iterative algorithms, Iterative closest point algorithm, Iterative methods, Motion estimation, Quaternions, Shape measurement, Solid modeling, Testing},
+	file = {IEEE Xplore Abstract Record:/home/hugop/Zotero/storage/PH5UIAWG/121791.html:text/html;paper_icp.pdf:/home/hugop/Zotero/storage/WUTKQ3T2/paper_icp.pdf:application/pdf},
 }
